package br.com.koruthos.atividade1.model;

public enum TipoPercurso {
    CURTO,
    NORMAL,
    SEGURO
}
