package br.com.koruthos.atividade1.model;

public enum TipoSeguranca {
    SEGURANCA_ALTA,
    SEGURANCA_MEDIA,
    SEGURANCA_BAIXA,
    PERIGO_MEDIO,
    PERIGO_ALTO
}
