package br.com.koruthos.atividade1.observer;

public interface MapaObserver {
    void onMapaUpdate();
}
